# simple-proxy

./: .coveragerc  .gitignore  LICENSE  README.md  build.sh  pyproject.toml  pytest.ini  run_test.sh  setup.cfg  setup.py
.github/workflows/: ci.yml
simple_proxy/: __init__.py  __main__.py  clients.py  run.py  utils.py  version.py
simple_proxy/handler/: echo_channel_handler.py  http_proxy_channel_handler.py  proxy_channel_handler.py  shell_channel_handler.py  socks5_proxy_channel_handler.py  tcp_proxy_channel_handler.py
simple_proxy/utils/: __init__.py  certutils.py  logutils.py  netutils.py  osutils.py  proxyutils.py  stringutils.py  tlsutils.py
tests/: test_certutils.py  test_clients.py  test_echo_channel_handler.py  test_http_proxy.py  test_http_proxy_channel_handler.py  test_logutils.py  test_netutils.py  test_osutils.py  test_proxy_channel_handler.py  test_proxyutils.py  test_run.py  test_socks5_proxy_channel_handler.py  test_stringutils.py
tests/handler/: test_echo_channel_handler.py  test_http_proxy_channel_handler.py  test_proxy_channel_handler.py  test_shell_channel_handler.py  test_socks5_proxy_channel_handler.py
tests/utils/: test_certutils.py  test_logutils.py  test_netutils.py  test_osutils.py  test_proxyutils.py  test_stringutils.py  test_tlsutils.py
