[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "simple_proxy"
version = "0.0.28"
description = "A simple NIO proxy tool"
readme = "README.md"
requires-python = ">=3.7, <4"
license = { text = "MIT" }
authors = [
    { name = "Hao Ruan", email = "ruanhao1116@gmail.com" },
]
keywords = ["network", "tcp", "non-blocking", "proxy"]

dependencies = [
    "click-option-group",
    "py-netty>=1.0.5",
    "cryptography>=42.0.0",
    "attrs>=22.1.0",
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/ruanhao/simple-proxy"


[project.scripts]
simple-proxy = "simple_proxy.__main__:_run"


[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
simple_proxy = ["*"]

[project.optional-dependencies]
dev = [
    "pip-chill" # used to generate requirements-chill.txt
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
    "coverage[toml]>=7.3.0"
]